# GestureVision

./: .dockerignore  Dockerfile  Dockerfile.api  LICENSE  MANIFEST.in  README.md  README_creation.md  docker-compose.yml  main_wayland.py  main_x11.py  pypi_readme.md  pyproject.toml  requirements.txt  requirements_api.txt
data/: config.json
src/gesturevision/: cli.py  main_vision.py  stop.py
src/gesturevision.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/gesturevision/api/: config.py  main.py
src/gesturevision/static/: DESIGN.md  index.html
